[gd_scene load_steps=5 format=3 uid="uid://bov4gy0wflpqf"]

[ext_resource type="Script" path="res://scripts/puddle.gd" id="1_wt7w0"]
[ext_resource type="Texture2D" uid="uid://bl846d8n2ukmh" path="res://assets/puddle.png" id="2_n5e8i"]
[ext_resource type="PackedScene" uid="uid://bbp0lnwxv44hn" path="res://scenes/caution_wet_sign.tscn" id="3_hhk1q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0tba5"]
radius = 42.0
height = 102.0

[node name="Puddle" type="Node2D"]
script = ExtResource("1_wt7w0")

[node name="Puddle" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_n5e8i")

[node name="CautionWetSign2" parent="." instance=ExtResource("3_hhk1q")]
position = Vector2(19, -45)

[node name="CautionWetSign" parent="." instance=ExtResource("3_hhk1q")]

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(-4, 0)
shape = SubResource("CapsuleShape2D_0tba5")

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_player_check_body_exited"]
